--- a/front-end/public/assets/css/black-dashboard.css
+++ b/front-end/public/assets/css/black-dashboard.css
@@ -3944,11 +3944,13 @@ table.tablesorter thead tr .headerSortDown {
 .sidebar .sidebar-wrapper .dropdown .dropdown-backdrop,
 .off-canvas-sidebar .sidebar-wrapper .dropdown .dropdown-backdrop {
   display: none !important;
+  
 }
 
 .sidebar .sidebar-wrapper .navbar-form,
 .off-canvas-sidebar .sidebar-wrapper .navbar-form {
   border: none;
+  background-color: #1a1e34;
 }
 
 .sidebar .navbar-minimize,
